--- a/01_Obtain_data/03_get_match_payloads.ipynb
+++ b/01_Obtain_data/03_get_match_payloads.ipynb
@@ -212,24 +212,18 @@
       "\n",
       "--- 🟠 Starting Check on 302 events to determine scrape list... 🟠 ---\n",
       "\n",
-      "--- CHECK COMPLETE: 1/302 events identified for scraping. ---\n",
-      "✅ Total Events: 302 | Already Obtained & Completed: 301 | To Scrape: 1\n",
+      "--- CHECK COMPLETE: 2/302 events identified for scraping. ---\n",
+      "✅ Total Events: 302 | Already Obtained & Completed: 300 | To Scrape: 2\n",
       "\n",
-      "---🚀 Starting Initial Concurrent Scraping for 1 Events 🚀---\n",
-      "--- Using 20 threads. API pause: 0.1s - 0.2s ---\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "---🚀 Starting Initial Concurrent Scraping for 2 Events 🚀---\n",
+      "--- Using 20 threads. API pause: 0.1s - 0.2s ---\n",
       "\n",
-      "--- Initial scraping phase complete. 1/1 succeeded initially. ---\n",
+      "--- Initial scraping phase complete. 2/2 succeeded initially. ---\n",
       "\n",
       "==================================================\n",
-      "✅ Finished! Match payloads obtained for 1/1 requested events (including retries).\n",
-      "54  matches found for new / ongoing events\n",
-      "Total run time = 0 m and 1 s.\n",
+      "✅ Finished! Match payloads obtained for 2/2 requested events (including retries).\n",
+      "87  matches found for new / ongoing events\n",
+      "Total run time = 0 m and 0 s.\n",
       "---🟢 Scraping finished. 🟢---\n"
      ]
     }
