--- a/01_Obtain_data/03_get_match_payloads.ipynb
+++ b/01_Obtain_data/03_get_match_payloads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 112,
    "id": "a5f52b33-4dd4-4609-9c6a-6ef248415876",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 113,
    "id": "3a6c1058-028a-4382-9e9d-ffbdaa5f5d25",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 114,
    "id": "3776bfc0-dfdb-47e6-aa40-da7173780d70",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 115,
    "id": "c2f3ec43-49ff-425b-a5ea-0f9489c64c78",
    "metadata": {},
    "outputs": [],
@@ -142,68 +142,65 @@
     "    if its payload file does not exist.\n",
     "\n",
     "    Args:\n",
-    "        shortlist_df (pd.DataFrame): Shortlist of events to be scraped (must contain 'eventId' and 'Completed').\n",
+    "        shortlist_df (pd.DataFrame): Shortlist of events to be scraped (must contain 'eventId' and 'EventStatus').\n",
     "        output_dir (str): The directory where existing match payloads are saved.\n",
     "\n",
     "    Returns:\n",
     "        pd.Series: A series of event_ids that need to be scraped.\n",
     "    \"\"\"\n",
     "\n",
-    "    # Use the input DF length for initial count\n",
     "    events_total_initial = len(shortlist_df)\n",
     "\n",
-    "    # --- NEW LOGIC: Initialize list for IDs TO SCRAPE ---\n",
+    "    # --- Pre-flight Check ---\n",
+    "    required_cols = ['eventId', 'EventStatus']\n",
+    "    if not all(col in shortlist_df.columns for col in required_cols):\n",
+    "        print(f\"--- ❌ ERROR: Shortlist DataFrame is missing one of {required_cols}. Cannot proceed. ---\")\n",
+    "        return pd.Series([], dtype=int) # Return empty Series\n",
+    "\n",
     "    ids_to_scrape: List[int] = []\n",
     "    events_checked_count = 0\n",
     "\n",
     "    print(f\"\\n--- 🟠 Starting Check on {events_total_initial} events to determine scrape list... 🟠 ---\")\n",
     "\n",
-    "    # Ensure required columns have correct types for comparison\n",
-    "    try:\n",
-    "        ongoing_events_df = shortlist_df[shortlist_df['EventStatus'] == 'Ongoing']\n",
-    "\n",
-    "    except KeyError as e:\n",
-    "        print(f\"--- ❌ ERROR: Missing required column '{e}' in shortlist DataFrame. Cannot proceed. ---\")\n",
-    "        return pd.Series([], dtype=int) # Return empty Series\n",
-    "\n",
     "    # loop through the shortlist dataframe\n",
     "    for index, event_row in shortlist_df.iterrows():\n",
     "        events_checked_count += 1\n",
     "        event_id = event_row['eventId']\n",
-    "        event_status = event_row['EventStatus']==\"Ongoing\"\n",
+    "        \n",
+    "        # --- FIX 1: Get the actual string status ---\n",
+    "        event_status_str = event_row['EventStatus'] \n",
     "\n",
-    "        # Construct the expected payload filename\n",
+    "        # 1. Skip 'Future' events (they have no data to scrape yet)\n",
+    "        if event_status_str == \"Future\":\n",
+    "            continue\n",
+    "\n",
+    "        # 2. Check if the event is 'Ongoing'\n",
+    "        is_ongoing = (event_status_str == \"Ongoing\")\n",
+    "\n",
+    "        # 3. Check if the payload file is missing\n",
     "        payload_file = os.path.join(output_dir, f\"{event_id}_match_payloads.csv\")\n",
+    "        file_is_missing = not os.path.exists(payload_file)\n",
     "\n",
-    "      \n",
-    "        # Scrape if EITHER:\n",
-    "        # tje event is NOT completed (i.e mathches are still being played)\n",
-    "        # or the payload file does NOT exist (not yet been scraped)\n",
-    "        if event_status == \"Ongoing\" or not os.path.exists(payload_file):\n",
-    "            if event_status == \"Future\":\n",
-    "                continue\n",
-    "            ids_to_scrape.append(event_id)\n",
-    "\n",
-    " \n",
-    "\n",
-    " \n",
-    "    # Filter the original DataFrame on the IDs identified for scraping\n",
+    "        # 4. Scrape if (Ongoing) OR (File is Missing)\n",
+    "        #    This is the core logic you defined.\n",
+    "        if is_ongoing or file_is_missing:\n",
+    "            ids_to_scrape.append(event_id)  \n",
+    "   \n",
     "    \n",
-    "    events_to_scrape_df = shortlist_df[shortlist_df['eventId'].isin(ids_to_scrape)].copy()\n",
-    "\n",
-    "    events_to_scrape_count = len(events_to_scrape_df)\n",
-    "    already_obtained_and_completed_count = events_total_initial - events_to_scrape_count # Calculate skipped count\n",
+    "    events_to_scrape_count = len(ids_to_scrape)\n",
+    "    # Calculate skipped (completed or future)\n",
+    "    already_obtained_and_completed_count = events_total_initial - events_to_scrape_count \n",
     "\n",
     "    print(f\"\\n--- CHECK COMPLETE: {events_to_scrape_count}/{events_total_initial} events identified for scraping. ---\")\n",
-    "    print(f\"✅ Total Events: {events_total_initial} | Already Obtained & Completed: {already_obtained_and_completed_count} | To Scrape: {events_to_scrape_count}\")\n",
+    "    print(f\"✅ Total Events: {events_total_initial} | Skipped: {already_obtained_and_completed_count} | To Scrape: {events_to_scrape_count}\")\n",
     "\n",
     "    # Return the clean Series of IDs that need scraping\n",
-    "    return events_to_scrape_df[\"eventId\"]"
+    "    return ids_to_scrape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 116,
    "id": "5db6801e-6bb6-4163-902e-e3f50d3ec80b",
    "metadata": {},
    "outputs": [
@@ -215,27 +212,30 @@
       "\n",
       "--- 🟠 Starting Check on 371 events to determine scrape list... 🟠 ---\n",
       "\n",
-      "--- CHECK COMPLETE: 0/371 events identified for scraping. ---\n",
-      "✅ Total Events: 371 | Already Obtained & Completed: 371 | To Scrape: 0\n",
+      "--- CHECK COMPLETE: 1/371 events identified for scraping. ---\n",
+      "✅ Total Events: 371 | Skipped: 370 | To Scrape: 1\n",
       "\n",
-      "--- ✅ PROCESS COMPLETE: No events remaining to scrape. ---\n"
+      "---🚀 Starting Initial Concurrent Scraping for 1 Events 🚀---\n",
+      "--- Using 20 threads. API pause: 0.1s - 0.2s ---\n"
      ]
     },
     {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/mdannegarn/table_tennis_stats/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "Event 3191: (1/1)  ❌ Failed: Error: ReadTimeout\n",
+      "\n",
+      "--- Initial scraping phase complete. 0/1 succeeded initially. ---\n",
+      "\n",
+      "--- Starting retry number 1/10 for 1 failed events ---\n",
+      "\n",
+      "--- Retry Attempt 1 complete. 1/1 succeeded this attempt. ---\n",
+      "\n",
+      "==================================================\n",
+      "✅ Finished! Match payloads obtained for 1/1 requested events (including retries).\n",
+      "0  matches found for new / ongoing events\n",
+      "Total run time = 0 m and 23 s.\n",
+      "---🟢 Scraping finished. 🟢---\n"
      ]
     }
    ],
@@ -254,7 +254,7 @@
     "\n",
     "    os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "    events_to_scrape_ids = filter_events_to_scrape(shortlist_df, OUTPUT_DIR)\n",
-    "    event_ids_to_process = events_to_scrape_ids.tolist()\n",
+    "    event_ids_to_process = events_to_scrape_ids\n",
     "    events_to_scrape_count = len(event_ids_to_process)\n",
     "\n",
     "    if events_to_scrape_count == 0:\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "419dc31d",
+   "id": "331da8fc",
    "metadata": {},
    "outputs": [],
    "source": []
