--- a/01_MainNotebooks/03_get_match_payloads.ipynb
+++ b/01_MainNotebooks/03_get_match_payloads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c47e3e09",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "3a6c1058-028a-4382-9e9d-ffbdaa5f5d25",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "75c7cd8a",
    "metadata": {},
    "outputs": [
@@ -78,27 +78,36 @@
       "--- ✅ Shortlist file found at ../Data/Processed/Events/shortlist_events.csv with 361 events ---\n",
       "--- 🟠 Reconciling event list with existing payload files... ---\n",
       "Total events in master list: 361\n",
-      "Found 1242 existing payload files in ../Data/Raw/Match_payloads.\n",
-      "🟢 0 new/ongoing events to scrape.\n",
-      "\n",
-      "--- ✅ PROCESS COMPLETE: No events remaining to scrape. ---\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+      "Found 1241 existing payload files in ../Data/Raw/Match_payloads.\n",
+      "🟢 2 new/ongoing events to scrape.\n",
+      "--- 🟢 Commencing Match Payloads Scraper 🟢---\n",
+      "Scraping 2 events...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/mdannegarn/table_tennis_stats/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.02it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- 💾 Processing and saving results... ---\n",
+      "Empty or Failed events: []\n",
+      "\n",
+      "--- ✅ Scraping Complete ---\n",
+      "Successfully saved 74 payloads across 2 files to ../Data/Raw/Match_payloads\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
