--- a/01_MainNotebooks/04_filter_singles_payloads.ipynb
+++ b/01_MainNotebooks/04_filter_singles_payloads.ipynb
@@ -2,33 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b61ef0d8-6031-41c7-b54d-8abc6f41b904",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'project_root' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mglob\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m List, Tuple\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mproject_root\u001b[49m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys.path:\n\u001b[32m      7\u001b[39m     sys.path.append(project_root)\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfilter_payloads\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m filter_singles_payloads\n",
-      "\u001b[31mNameError\u001b[39m: name 'project_root' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "import glob\n",
+    "import sys\n",
     "from typing import List, Tuple\n",
     "\n",
     "project_root = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "if project_root not in sys.path:\n",
     "    sys.path.append(project_root)\n",
     "    \n",
-    "from utils.filter_payloads import filter_singles_payloads"
+    "from utils.filterPayloads import filter_singles_payloads"
    ]
   },
   {
@@ -48,12 +37,12 @@
     "PAYLOADS_FILES = glob.glob (f\"{RAW_PAYLOADS_DIR}/*csv\")\n",
     "\n",
     "# Define string to  be kept for subeeventtype data. \n",
-    "REMOVE_STRINGS = [\"double\", \"U21\",\"class\"]"
+    "REMOVE_STRINGS = [\"double\", \"U21\",\"class\", \"team\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e307f5f6-bbfe-48e8-9c77-1a2534ad30e0",
    "metadata": {},
    "outputs": [
@@ -70,9 +59,9 @@
      "text": [
       "\n",
       "--- ✅ Filtering Complete ---\n",
-      "Successfully processed and saved singles payloads for: 188 events\n",
+      "Successfully processed and saved singles payloads for: 189 events\n",
       "Events found with ONLY non-singles payloads: 1 events\n",
-      "Events found with EMPTY payload files: 1053 events\n"
+      "Events found with EMPTY payload files: 1051 events\n"
      ]
     }
    ],
